native/crates/specular-interact/tests/it/snapshots/it__comments__a_drag_on_empty_canvas_writes_a_comment_on_that_region_of_the_canvas.snap
---
source: crates/specular-interact/tests/it/comments.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"p1","type":"link","x":100,"y":100,"width":400,"height":300,"url":"https://example.com/p1"}
  {"id":"p2","type":"link","x":700,"y":100,"width":400,"height":300,"url":"https://example.com/p2"}
edges:
specular: {"entityOrder":["p1","p2"]}
annotations:
  {"id":"e220a8397b1dcdaf","anchor":{"type":"region","canvasRect":{"x":550,"y":500,"width":100,"height":60}},"author":"user","text":"group these","status":"pending","replies":[],"createdAt":"1970-01-02T00:00:00.000Z","metadata":{"threadId":"thread_6e789e6aa1b965f4"}}
