native/crates/specular-interact/tests/it/snapshots/it__comments__a_region_is_bound_to_the_first_page_it_grabbed_from.snap
---
source: crates/specular-interact/tests/it/comments.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"p1","type":"link","x":100,"y":100,"width":400,"height":300,"url":"https://example.com/p1"}
  {"id":"p2","type":"link","x":700,"y":100,"width":400,"height":300,"url":"https://example.com/p2"}
edges:
specular: {"entityOrder":["p1","p2"]}
annotations:
  {"id":"e220a8397b1dcdaf","anchor":{"type":"region","docRect":{"x":350,"y":50,"width":300,"height":100}},"author":"user","text":"fix the header","status":"pending","replies":[],"createdAt":"1970-01-02T00:00:00.000Z","pageAnchor":{"pageId":"p1","pageUrl":"https://example.com/p1"},"metadata":{"threadId":"thread_6e789e6aa1b965f4"}}
